# VINS-Fusion

config/: vins_rviz_config.rviz
config/100t8/: 100t8_mono_imu_515depth.yaml  100t8_mono_imu_config.yaml  100t8_stereo_config.yaml  100t8_stereo_imu_config.yaml  cam0_pinhole.yaml  cam0_to_515depth.yaml  cam1_pinhole.yaml
config/asus/: asus.yaml  cam0_pinhole.yaml  color_imu.yaml  rgbd_imu.yaml
config/realsense_d435i/: left.yaml  right.yaml
config/realsense_l515/: cam0_pinhole.yaml  color_imu.yaml  color_imu0.yaml  rgbd_imu.yaml  rgbd_imu0.yaml
feature_enhancer/: CMakeLists.txt
feature_enhancer/src/: depth_to_camera.cpp  mapping.cpp
loop_fusion/src/: pose_graph.cpp
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/utility/: visualization.cpp  visualization.h
